other/a/advanced-restrict-image-registries/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  annotations:
    corp.com/allowed-registries: "docker.io"
  namespace: default  
spec:
  containers:
  - name: nginx
    image: docker.io/nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
spec:
  containers:
  - name: test
    image: ghcr.io/kyverno/kyverno-annotations-example:latest
