other/a/advanced-restrict-image-registries/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: advanced-restrict-image-registries
policies:
- advanced-restrict-image-registries.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: advanced-restrict-image-registries
  resources:
  - bad-pod
  result: fail
  rule: validate-corp-registries
- kind: Pod
  policy: advanced-restrict-image-registries
  resources:
  - good-pod
  result: pass
  rule: validate-corp-registries
variables: values.yaml
